testCases/parserTestCases/correct/branchStmtC.cs16
-- Carston Schilds, Feb 21st 2016
void main(void){
    branch(foo())
        default: foo();
    end;
    branch(foo())
        case 1: foo1();
        case 11: foo11();
        case 12: foo12();
        default: foo();
    end;
}